--- a/medi_queue/pubspec.yaml
+++ b/medi_queue/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  animated_splash_screen: ^1.3.0
+  go_router: ^13.2.0
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +28,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/intro-one-logo.svg
+    - assets/icons/intro-one-logo.png
+    - assets/icons/intro-two-logo.png
+    - assets/icons/intro-three-logo.png
+    - assets/icons/intro-four-logo.png
+    - assets/icons/splash_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
