--- a/medi_queue/pubspec.yaml
+++ b/medi_queue/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   go_router: ^13.2.0
   cached_network_image: ^3.3.1
+  flutter_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
