--- a/medi_queue/pubspec.yaml
+++ b/medi_queue/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   go_router: ^13.2.0
   cached_network_image: ^3.3.1
   flutter_riverpod: ^2.4.10
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
